--- a/package.json
+++ b/package.json
@@ -21,13 +21,23 @@
     "bootstrap-vue": "^0.18.0",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "mysql": "^2.13.0",
     "serve-static": "^1.12.3",
     "vue": "^2.4.2",
+    "vue-loader": "^12.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
+    "vue-template-compiler": "^2.4.2",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "webpack": "^3.3.0"
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-stage-0": "^6.1.2",
+    "babel-runtime": "^5.8.0",
+    "css-loader": "^0.28.4",
+    "webpack": "2.2.0"
   }
 }
