--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.0.0-alpha.4",
     "bootstrap-vue": "^0.18.0",
     "crypto": "0.0.3",
     "css-loader": "^0.28.4",
